# elikos_ros

elikos_2dnav/: CMakeLists.txt  package.xml
elikos_2dnav/launch/: costmap_common_params.yaml  elikos_configuration.launch  global_costmap_params.yaml  local_costmap_params.yaml  move_base.launch
elikos_arena_detection/: CMakeLists.txt  package.xml
elikos_detection/: CMakeLists.txt  blobdetection_nodelet.xml  package.xml
elikos_detection/launch/: nodelet_blobdetection.launch
elikos_detection/src/blobdetection/: Blob.cpp  BlobDetection.cpp  Color.cpp  elikos_blobdetection_nodelet.cpp
elikos_detection/src/blobdetection/include/: Blob.hpp  BlobDetection.hpp  Color.hpp  elikos_blobdetection_nodelet.hpp
elikos_detection/src/detection/BlobDetection/: Color.cpp  Color.h
elikos_detection/src/detection/CVWrapper/: AbstractCVWrapper.cpp  AbstractCVWrapper.h  CpuCV.cpp  CpuCV.h  GpuCV.cpp  GpuCV.h
